--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="alternate" type="application/rss+xml" title=" $BCAT43 &raquo; Comments Feed" href="#" />
 	<link rel="stylesheet" href="style.css">
 	<meta name="title" content="$BCAT43 - ballincat43">
-<meta name="description" content="$BCAT43 - ballincat43 is a unique and whimsical cryptocurrency that combines the worlds of Harry Potter, Barack Obama, Elon Musk,">
+<meta name="description" content="$BCAT43 - ballincat43 ">
 <meta name="keywords" content="meta crypto blockchain">
 <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
