--- a/index.html
+++ b/index.html
@@ -3835,23 +3835,14 @@ align-items: center;
 																	<figure class='gallery-item'>
 																		<div class='gallery-icon landscape'>
 																			<img width="768" height="576"
-																				src="./14.gif"
+																				src="./msg874774223-58219.jpg"
 																				class="attachment-medium_large size-medium_large"
 																				alt="" decoding="async" loading="lazy"
 																				srcset=""
 																				sizes="(max-width: 768px) 100vw, 768px" />
 																		</div>
 																	</figure>
-																	<figure class='gallery-item'>
-																		<div class='gallery-icon landscape'>
-																			<img width="768" height="534" src="./15.gif
-																			"
-																				class="attachment-medium_large size-medium_large"
-																				alt="" decoding="async" loading="lazy"
-																				srcset=""
-																				sizes="(max-width: 768px) 100vw, 768px" />
-																		</div>
-																	</figure>
+													
 																	
 																</div>
 															</div>
