--- a/index.html
+++ b/index.html
@@ -3041,7 +3041,7 @@ flexibility(document.documentElement);
 												class="ast-custom-button-link"
 												href="https://www.youtube.com/watch?v=wSYLHb5tT1Y"
 												target="_blank">
-												<div class=ast-custom-button> FREE $BCAT43</div>
+												<div class=ast-custom-button> BALL WITH CAT</div>
 											</a><a class="menu-link" href="#" target="_blank">FREE $BCAT43</a></div>
 									</div>
 								</div>
