--- a/index.html
+++ b/index.html
@@ -3039,9 +3039,9 @@ flexibility(document.documentElement);
 										data-section="section-hb-button-2">
 										<div class="ast-builder-button-wrap ast-builder-button-size-sm"><a
 												class="ast-custom-button-link"
-												href="https://www.youtube.com/watch?v=wSYLHb5tT1Y"
+												href="https://www.youtube.com/watch?v=d6x0KJ8T7Co"
 												target="_blank">
-												<div class=ast-custom-button> BALL WITH CAT</div>
+												<div class=ast-custom-button> CLICK FOR P*SSY</div>
 											</a><a class="menu-link" href="#" target="_blank">FREE $BCAT43</a></div>
 									</div>
 								</div>
