--- a/index.html
+++ b/index.html
@@ -3376,7 +3376,7 @@ flexibility(document.documentElement);
 																style="display: flex; justify-content: center; color: white; background-color: #19191970; padding: 50px; ">
 																<p> <span
 																		style="font-weight: 800; color: #00d084;">ABOUT
-																		US</span> <br><br>$BCAT43 - ballincat43 is a unique and whimsical cryptocurrency that combines the worlds of Harry Potter, Barack Obama, Elon Musk, and space exploration into one exciting digital asset. Inspired by the imaginative wizardry of Harry Potter, the visionary leadership of Barack Obama, the entrepreneurial spirit of Elon Musk, and the fascination with rockets, this crypto coin promises to take investors on a magical journey to the stars. With a touch of fantasy, politics, innovation, and science all rolled into one, $BCAT43 - ballincat43 is not just a cryptocurrency but a symbol of the boundless possibilities and dreams that technology and human imagination can bring to life
+																		US</span> <br><br>$BCAT43 - Thank you ballincat43. Ballincat43 refers to the TikTok page @ballincaat43 which is a 30core and Pinkcore account that centers on an image of a cat dunking a basketball. The account spawned the phrase "Thank You Ballincat43" which became a spam comment in comment sections across TikTok in mid-2023. Ballincat43 took inspiration from the precursor 30core creator Bludlung who similarly started their videos with "Thank You Bludlung," similar to a hip-hop producer tag. Ballincat43 gained fan accounts and TikTok sounds. Many of the account's edits used videos from TikToker @evilahhfatguy and the "pluh" sound effect.
 
 																	<br><br>
 																</p>
