--- a/index.html
+++ b/index.html
@@ -3030,9 +3030,9 @@ flexibility(document.documentElement);
 												class="ast-custom-button-link"
 												href="https://app.uniswap.org/#/swap?outputCurrency=&#038;chain=ethereum"
 												target="_blank">
-												<div class=ast-custom-button>sell now</div>
+												<div class=ast-custom-button>TikTok</div>
 											</a><a class="menu-link"
-												href="https://app.uniswap.org/#/swap?outputCurrency=&#038;chain=ethereum"
+												href="https://www.tiktok.com/@ballincaat43"
 												target="_blank">sell now</a></div>
 									</div>
 									<div class="ast-builder-layout-element site-header-focus-item ast-header-button-2"
